Remove initial size parameter for new HashSet() (#1709)